update workflow name to avoid confusion

--- a/.github/workflows/publish-sonatype-central.yml
+++ b/.github/workflows/publish-sonatype-central.yml
@@ -1,5 +1,5 @@
 # .github/workflows/publish-artifacts.yml
-name: Publish Artifacts
+name: Publish Artifacts to Sonatype Central
 on:
   push:
     tags:
